--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
 		<link rel="stylesheet" href="css/estilos.css"/>
 	</head>
 	<body>
-		<h1>Aqui vamos a hacer un blog post </h1>
-		<p>Y éste es el párrafo de inicio</p>
+		<div id="container">
+			<div id="post">
+		<h1>Este es el titulo interesante y atractivo del post</h1>
+		<p>Y éste es el párrafo de inicio donde vamos a explicar el cambio de ramas</p>
+		</div>
+	</div>
 	</body>
 </html>
