--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,8 @@
 			</div>
 			<div id="post">
 		<h1>Este es el titulo interesante y atractivo del post</h1>
-		<p>Y éste es el párrafo de inicio donde vamos a explicar el cambio de ramas</p>
+		<p>Y éste es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+		<p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube...por ahora</p>
 		</div>
 	</div>
 	</body>
