--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
 		<div id="container">
 			<div id="RAMA_QA">
 			HYPERBLOG INICIA_QA
-			<span id="tagline">Tu blog de QA de CONFIANZA AHORA EN GITHUB
+			<span id="tagline">Tu blog de QA de CONFIANZA AHORA EN GITHUB 2.0
 			</span>
 			</div>
 			<div id="post">
