Color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
 	<body>
 		<div id="container">
 			<div id="RAMA_QA">
+				<img id="logo" src="Imagenes/ImagenGithubPlatzi.png"/>
 			HYPERBLOG INICIA_QA
 			<span id="tagline">Tu blog de QA de CONFIANZA AHORA EN GITHUB 2.0
 			</span>
