--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,9 @@
 		<p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube...por ahora</p>
 		<p>Suscribete y dale Like en MASTER</p>
 		</div>
+		<div id="footer">
+		Hecho con amor en Platzi &lt;3
+		</div>
 	</div>
 	</body>
 </html>
